Anadir meta datos

--- a/1.inicio/index.html
+++ b/1.inicio/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AmbiTrack - Tu impacto cuenta. Regístralo. Mejora el planeta.">
+    <meta name="keywords" content="AmbiTrack, cambio climático, sostenibilidad, ecología, medio ambiente">
+    <meta name="author" content="Oscar, Duver, Catalina, Joshua">
     <link rel="icon" href="/img/icono_ambitrack.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>AmbiTrack</title>
